// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Label should render a label component 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 1em;
  height: 28px;
  font-weight: 400;
  color: hsl(200,10%,20%);
}

<label
    class="c0"
  >
    It is important to label UI elements
  </label>
</DocumentFragment>
`;

exports[`component: Label should support margin space props 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 1em;
  height: 28px;
  font-weight: 400;
  color: hsl(200,10%,20%);
  margin-left: 4px;
}

<label
    class="c0"
  />
</DocumentFragment>
`;
